Bandits reworked for Ray 1.0.x, with Bokeh removed

--- a/ray-rllib/multi-armed-bandits/00-Multi-Armed-Bandits-Overview.ipynb
+++ b/ray-rllib/multi-armed-bandits/00-Multi-Armed-Bandits-Overview.ipynb
@@ -10,7 +10,9 @@
     "\n",
     "![Anyscale Academy](../../images/AnyscaleAcademyLogo.png)\n",
     "\n",
-    "This part of the [RLlib tutorial](../00-Ray-RLlib-Overview.ipynb) tutorial introduces _Multi-Armed Bandits_ (MABs) a popular approach that is very similar to \"classic\" reinforcement learning (RL), but with some differences, which we'll cover in the [first lesson](01-Introduction-to-Multi-Armed-Bandits.ipynb). [RLlib](https://ray.readthedocs.io/en/latest/rllib.html) provides several bandit algorithms:\n",
+    "This part of the [RLlib tutorial](../00-Ray-RLlib-Overview.ipynb) tutorial introduces _Multi-Armed Bandits_ (MABs) a popular approach that is very similar to \"classic\" reinforcement learning (RL), but with some differences, which we'll cover in the [first lesson](01-Introduction-to-Multi-Armed-Bandits.ipynb).\n",
+    "\n",
+    "[RLlib](https://ray.readthedocs.io/en/latest/rllib.html) provides several bandit algorithms:\n",
     "\n",
     "* [Linear Upper Confidence Bound (contrib/LinUCB)](https://docs.ray.io/en/latest/rllib-algorithms.html#linear-upper-confidence-bound-contrib-linucb)\n",
     "* [Linear Thompson Sampling (contrib/LinTS)](https://docs.ray.io/en/latest/rllib-algorithms.html#linear-thompson-sampling-contrib-lints)"
@@ -42,19 +44,11 @@
     "## Getting Help\n",
     "\n",
     "* The [#tutorial channel](https://ray-distributed.slack.com/archives/C011ML23W5B) on the [Ray Slack](https://ray-distributed.slack.com). [Click here](https://forms.gle/9TSdDYUgxYs8SA9e8) to join.\n",
-    "* [Email](mailto:academy@anyscale.com)\n",
     "\n",
     "Find an issue? Please report it!\n",
     "\n",
     "* [GitHub issues](https://github.com/anyscale/academy/issues)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -73,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
