--- a/ray-rllib/multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb
+++ b/ray-rllib/multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb
@@ -27,7 +27,8 @@
     "import gym\n",
     "from gym.spaces import Discrete, Box\n",
     "import numpy as np\n",
-    "import random, time\n",
+    "import random\n",
+    "import time\n",
     "import ray"
    ]
   },
@@ -245,7 +246,7 @@
    },
    "outputs": [],
    "source": [
-    "df = analysis.dataframe()\n",
+    "df = analysis.dataframe(metric=\"episode_reward_mean\", mode=\"max\")\n",
     "df"
    ]
   },
@@ -360,7 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.shutdown()  # \"Undo ray.init()\"."
+    "ray.shutdown()"
    ]
   }
  ],
@@ -380,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
