--- a/ray-rllib/multi-armed-bandits/04-Linear-Upper-Confidence-Bound.ipynb
+++ b/ray-rllib/multi-armed-bandits/04-Linear-Upper-Confidence-Bound.ipynb
@@ -227,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = analysis.dataframe()\n",
+    "df = analysis.dataframe(metric=\"episode_reward_mean\", mode=\"max\")\n",
     "df"
    ]
   },
@@ -257,15 +257,8 @@
     "    frame = frame.append(df, ignore_index=True)\n",
     "\n",
     "df = frame.groupby(\"info/num_steps_trained\")[\n",
-    "    \"info/learner/default_policy/cumulative_regret\"].aggregate([\"mean\", \"max\", \"min\", \"std\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    \"info/learner/default_policy/cumulative_regret\"].aggregate([\"mean\", \"max\", \"min\", \"std\"])\n",
+    "\n",
     "df"
    ]
   },
@@ -282,28 +275,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bokeh_util import plot_cumulative_regret\n",
-    "# The next two lines prevent Bokeh from opening the graph in a new window.\n",
-    "import bokeh\n",
-    "bokeh.io.reset_output()\n",
-    "bokeh.io.output_notebook()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_cumulative_regret(df)"
+    "df.plot(y=\"mean\", yerr=\"std\", xlabel=\"steps\", ylabel=\"regret\", title=\"Cumulative Regret\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "([image](../../images/rllib/LinUCB-Cumulative-Regret.png))\n",
-    "\n",
     "So the _cumulative_ regret increases for the entire number of training steps for all five trials, but for larger step numbers, the amount of regret added decreases as we learn, so the graph begins to level off as the system gets better at optimizing the mean reward."
    ]
   },
@@ -331,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.shutdown()  # \"Undo ray.init()\"."
+    "ray.shutdown()"
    ]
   }
  ],
@@ -351,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
