--- a/ray-rllib/multi-armed-bandits/05-Linear-Thompson-Sampling.ipynb
+++ b/ray-rllib/multi-armed-bandits/05-Linear-Thompson-Sampling.ipynb
@@ -107,19 +107,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bokeh_util import plot_cumulative_regret, plot_wheel_bandit_model_weights\n",
-    "# The next two lines prevent Bokeh from opening the graph in a new window.\n",
-    "import bokeh\n",
-    "bokeh.io.reset_output()\n",
-    "bokeh.io.output_notebook()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "wbe = WheelBanditEnv()\n",
     "wbe.config"
    ]
@@ -235,15 +222,8 @@
     "\n",
     "regrets = df \\\n",
     "    .groupby(\"info/num_steps_trained\")[\"info/learner/default_policy/cumulative_regret\"] \\\n",
-    "    .aggregate([\"mean\", \"max\", \"min\", \"std\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    .aggregate([\"mean\", \"max\", \"min\", \"std\"])\n",
+    "\n",
     "regrets"
    ]
   },
@@ -253,7 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cumulative_regret(regrets)"
+    "regrets.plot(y=\"mean\", yerr=\"std\", xlabel=\"steps\", title=\"Cumulative Regrets\")"
    ]
   },
   {
@@ -304,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot weight distributions for different arms"
+    "Plot the weight distributions for the different arms:"
    ]
   },
   {
@@ -313,14 +293,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_wheel_bandit_model_weights(means, covs)"
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "colors  = [\"blue\", \"black\", \"green\", \"red\", \"yellow\"]\n",
+    "labels  = [\"arm{}\".format(i) for i in range(5)]\n",
+    "\n",
+    "for i in range(0, 5):\n",
+    "    x, y = np.random.multivariate_normal(means[i] / 30, covs[i], 5000).T\n",
+    "    plt.scatter(x, y, color=colors[i])\n",
+    "    \n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here is an [image](../../images/rllib/LinTS-Weight-Distribution-of-Arms-05.png) from a previous run. How similar is your graph?"
+    "Here's an [image](../../images/rllib/LinTS-Weight-Distribution-of-Arms-05.png) from a previous run. How similar is your graph?"
    ]
   },
   {
@@ -346,7 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.shutdown()  # \"Undo ray.init()\"."
+    "ray.shutdown()"
    ]
   }
  ],
@@ -366,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
