--- a/ray-rllib/multi-armed-bandits/06-Market-Example.ipynb
+++ b/ray-rllib/multi-armed-bandits/06-Market-Example.ipynb
@@ -15,9 +15,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we've learned about multi-armed bandits and methods for optimizing rewards, let's look at real-world applications, starting with a stock market example. We'll also learn a little more about configuring RLlib trainers.\n",
+    "Now that we've learned about multi-armed bandits and methods for optimizing rewards, let's look at real-world applications, starting with a stock market example.\n",
     "\n",
-    "We'll load a dataset derived from this [NYU Stern table](http://pages.stern.nyu.edu/~adamodar/New_Home_Page/datafile/histretSP.html) that shows returns for nearly a century of market data, including dividends and adjustments for inflation. The `market.tsv` file in this folder contains the data."
+    "How well could you invest in the public markets, if you could only observe one macroeconomic signal *inflation* and could only update your investments once each year?\n",
+    "\n",
+    "To explore this, first we'll load a dataset derived from this [NYU Stern table](http://pages.stern.nyu.edu/~adamodar/New_Home_Page/datafile/histretSP.html) that shows returns for nearly a century of market data, including dividends and adjustments for inflation. The `market.tsv` file in this folder contains the data."
    ]
   },
   {
@@ -28,7 +30,8 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import os, sys"
+    "import os\n",
+    "import sys"
    ]
   },
   {
@@ -40,7 +43,7 @@
     "# Some properties we'll need:\n",
     "DEFAULT_MAX_INFLATION = 100.0\n",
     "DEFAULT_TICKERS = [\"sp500\", \"t.bill\", \"t.bond\", \"corp\"]\n",
-    "DEFAULT_DATA_FILE = os.path.abspath(os.path.curdir) + '/market.tsv'  # full path"
+    "DEFAULT_DATA_FILE = os.path.abspath(os.path.curdir) + \"/market.tsv\"  # full path"
    ]
   },
   {
@@ -52,6 +55,13 @@
     "def load_market_data (file_name):\n",
     "    with open(file_name, \"r\") as f:\n",
     "        return pd.read_table(f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's load and examine the data:"
    ]
   },
   {
@@ -68,13 +78,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see the data spans 92 years, from 1928 to 2019. The columns represent:\n",
-    "  * the year\n",
-    "  * inflation rate at the time\n",
-    "  * [S&P500](https://en.wikipedia.org/wiki/S%26P_500_Index) (composite stock index)\n",
-    "  * [Treasury Bills](https://www.investopedia.com/terms/t/treasurybill.asp) (short-term gov bonds)\n",
-    "  * [Treasury Bonds](https://www.investopedia.com/terms/t/treasurybond.asp) (long-term gov bonds)\n",
-    "  * [Moody's Baa Corporate Bonds](https://en.wikipedia.org/wiki/Moody%27s_Investors_Service#Moody's_credit_ratings) (moderate risk)"
+    "As you can see the data spans 92 years, from 1928 to 2019. \n",
+    "\n",
+    "The columns represent:\n",
+    "  * `year`: the year\n",
+    "  * `inflation`: the inflation rate at the time\n",
+    "  * `sp500`: [S&P500](https://en.wikipedia.org/wiki/S%26P_500_Index) (composite stock index)\n",
+    "  * `t.bill`: [Treasury Bills](https://www.investopedia.com/terms/t/treasurybill.asp) (short-term gov bonds)\n",
+    "  * `t.bond`: [Treasury Bonds](https://www.investopedia.com/terms/t/treasurybond.asp) (long-term gov bonds)\n",
+    "  * `corp`: [Moody's Baa Corporate Bonds](https://en.wikipedia.org/wiki/Moody%27s_Investors_Service#Moody's_credit_ratings) (moderate risk)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis of the Data\n",
+    "\n",
+    "Let's also look at descriptions statistics for each column:"
    ]
   },
   {
@@ -90,15 +111,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"Corp\" refers to corporate bonds."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Analysis of the Data\n",
-    "\n",
     "What are the worst case and best case scenarios? In other words, if one could predict the future market performance, what are the possible ranges of total failure vs. total success over the past century? By \"total\", we mean what if you had all your money in a given year invested in the worst performing _sector_ (S&P500, T bills, or other) or you were invested in the best performing sector for that year."
    ]
   },
@@ -127,47 +139,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.path.append('../..')\n",
-    "from util.line_plots import plot_line, plot_line_with_stddev, plot_between_lines\n",
-    "from bokeh_util import plot_cumulative_regret"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import bokeh\n",
-    "bokeh.io.reset_output()\n",
-    "bokeh.io.output_notebook()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "min_max = pd.DataFrame.from_dict({'year': df['year'], 'min':min_list, 'max':max_list})\n",
     "min_max"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_between_lines(min_max, x_col='year', lower_col='min', upper_col='max', \n",
-    "                   title='Best to Worst', x_axis_label='year', y_axis_label='%')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the graph, there are some years where the performance varies widely, while other years everything returns about the same performance."
+    "We can visualize the best and worst returns, year over year.\n",
+    "Overall this should look like a [*random walk*](https://en.wikipedia.org/wiki/Random_walk):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "plt.fill_between(\n",
+    "    df[\"year\"],\n",
+    "    min_list,\n",
+    "    max_list,\n",
+    "    color=\"b\",\n",
+    "    alpha=0.2\n",
+    ")\n",
+    "\n",
+    "plt.title(\"Best vs. Worst Market Return\")\n",
+    "plt.xlabel(\"Year\")\n",
+    "plt.ylabel(\"Return\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are some years where the performance varies widely, while other years everything returns about the same performance."
    ]
   },
   {
@@ -188,7 +199,6 @@
     "import gym\n",
     "from gym.spaces import Discrete, Box\n",
     "from gym.utils import seeding\n",
-    "import numpy as np\n",
     "import random"
    ]
   },
@@ -208,9 +218,9 @@
     "class MarketBandit (gym.Env):\n",
     "    \n",
     "    def __init__ (self, config={}):\n",
-    "        self.max_inflation = config.get('max-inflation', DEFAULT_MAX_INFLATION)\n",
-    "        self.tickers = config.get('tickers', DEFAULT_TICKERS)\n",
-    "        self.data_file = config.get('data-file', DEFAULT_DATA_FILE)\n",
+    "        self.max_inflation = config.get(\"max-inflation\", DEFAULT_MAX_INFLATION)\n",
+    "        self.tickers = config.get(\"tickers\", DEFAULT_TICKERS)\n",
+    "        self.data_file = config.get(\"data-file\", DEFAULT_DATA_FILE)\n",
     "        print(f\"MarketBandit: max_inflation: {self.max_inflation}, tickers: {self.tickers}, data file: {self.data_file} (config: {config})\")\n",
     "\n",
     "        self.action_space = Discrete(4)\n",
@@ -310,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use this environment in a kind of *monte carlo simulation* to measure a baseline for what the rewards would be over a long period if you always used a random action."
+    "We can use this environment in a kind of [*monte carlo simulation*](https://en.wikipedia.org/wiki/Monte_Carlo_method) to measure a baseline for what the rewards would be over a long period if you merely used actions selected at random."
    ]
   },
   {
@@ -357,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_line(df_mc, x_col='index', y_col='reward', title='Reward Over Iterations')"
+    "df_mc.plot(y=\"reward\", title=\"Reward Over Iterations\")"
    ]
   },
   {
@@ -366,7 +376,7 @@
    "source": [
     "([image](../../images/rllib/MarketReward-Random.png))\n",
     "\n",
-    "Yes, it looks quite random... There's no improvement happening at all."
+    "Yes, it looks quite random... There is no improvement (i.e., *learning*) happening at all."
    ]
   },
   {
@@ -382,7 +392,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Recall in the `__init__()` method for `MarketBandit` that we set some parameters from the passed in `config` object (with defaults). We don't construct this explicitly ourselves. Rather, RLlib will do this. So, we need to construct the canonical `config` object we want to use. To do this, we use the idioms shown in the next several cells:"
+    "Recall in the `__init__()` method for `MarketBandit` that we set some parameters from the passed in `config` object. \n",
+    "So we need to create a custom config object with our parameters, by building on the default `TS_CONFIG` object for _LinTS_:"
    ]
   },
   {
@@ -391,17 +402,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ray.rllib.agents.trainer import with_base_config, with_common_config\n",
+    "import copy\n",
     "from ray.rllib.contrib.bandits.agents.lin_ts import TS_CONFIG\n",
-    "from ray.rllib.contrib.bandits.agents.lin_ts import LinTSTrainer\n",
-    "import ray"
+    "\n",
+    "market_config = copy.deepcopy(TS_CONFIG)\n",
+    "\n",
+    "market_config[\"env\"] = MarketBandit\n",
+    "market_config[\"max-inflation\"] = DEFAULT_MAX_INFLATION;\n",
+    "market_config[\"tickers\"] = DEFAULT_TICKERS;\n",
+    "market_config[\"data-file\"] = DEFAULT_DATA_FILE;"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Initialize Ray:"
+    "We'll also define a custom trainer, which builds on the `LinTSTrainer` with \"updates\". \n",
+    "This will be the first argument that we'll pass to `ray.tune.run()` later. \n",
+    "\n",
+    "Note: if all we needed was the default `LinTSTrainer` trainer, as is and with no customized config settings, we could instead just pass the string `\"contrib/LinTS\"` to `ray.tune.run()`.  "
    ]
   },
   {
@@ -410,6 +429,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ray.rllib.contrib.bandits.agents.lin_ts import LinTSTrainer\n",
+    "\n",
+    "MarketLinTSTrainer = LinTSTrainer.with_updates(\n",
+    "    name=\"MarketLinTSTrainer\",\n",
+    "    default_config=market_config,      # Will be merged with Trainer.COMMON_CONFIG (rllib/agent/trainer.py)\n",
+    "    #default_policy=[somePolicyClass]  # If we had a policy...\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then initialize Ray:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ray\n",
+    "\n",
     "ray.init(ignore_reinit_error=True)"
    ]
   },
@@ -417,45 +460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We need a custom config object with our parameters for `MarketBandit`. We do this building on the default `TS_CONFIG` object for _LinTS_:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "market_config = with_base_config(TS_CONFIG, {\n",
-    "    \"env\":           MarketBandit,\n",
-    "    'max-inflation': DEFAULT_MAX_INFLATION,\n",
-    "    'tickers':       DEFAULT_TICKERS,\n",
-    "    'data-file':     DEFAULT_DATA_FILE\n",
-    "})\n",
-    "\n",
-    "stop = {\n",
-    "    \"training_iteration\": 100\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Also, we'll define a custom trainer, which builds on the `LinTSTrainer`, with \"updates\". Note that it's the first argument we'll pass to `tune.run()` in the following cell. When all we need is `LinTSTrainer`, as is, and no extra custom config settings, we can just pass the string `contrib/LinTS` to `tune.run()`.  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MarketLinTSTrainer = LinTSTrainer.with_updates(\n",
-    "    name=\"MarketLinTSTrainer\",\n",
-    "    default_config=market_config,      # Will be merged with Trainer.COMMON_CONFIG (rllib/agent/trainer.py)\n",
-    "    #default_policy=[somePolicyClass]  # If we had a policy...\n",
-    ")"
+    "Then run Tune:"
    ]
   },
   {
@@ -466,6 +471,10 @@
    },
    "outputs": [],
    "source": [
+    "stop = {\n",
+    "    \"training_iteration\": 100\n",
+    "}\n",
+    "\n",
     "analysis = ray.tune.run(\n",
     "    MarketLinTSTrainer,\n",
     "    config=market_config,\n",
@@ -493,7 +502,7 @@
    "source": [
     "## Analyzing the results\n",
     "\n",
-    "Let's analyze the rewards and cumulative regrets of these trials."
+    "Let's analyze the rewards and cumulative regrets from these trials."
    ]
   },
   {
@@ -529,17 +538,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_line_with_stddev(rewards, x_col='info/num_steps_trained', y_col='mean', stddev_col='std', \n",
-    "                      title='Rewards vs. Steps', x_axis_label='step', y_axis_label='reward')"
+    "rewards.plot(y=[\"mean\", \"max\"], secondary_y=True, title=\"Rewards vs. Steps\", xlabel=\"step\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "([image](../../images/rllib/Market-Bandit-Rewards-vs-Steps.png))\n",
-    "\n",
-    "The rewards reach what appears to be nearly optimal by 3000 steps, then shows some slow improvement beyond 8000."
+    "The rewards bounce around at first, then appear to stabilize after 5000 steps, with slow improvement afterwards."
    ]
   },
   {
@@ -561,14 +567,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cumulative_regret(regrets)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "([image](../../images/rllib/Market-Bandit-Cumulative-Regret.png))"
+    "regrets.plot(y=\"mean\", yerr=\"std\", title=\"Regrets vs. Steps\", xlabel=\"step\")"
    ]
   },
   {
@@ -593,7 +592,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You should see a number between 6-8%. That's better than the random action baseline of 3.75%, but no where near the best case scenario of 15.18% return. Hence, our regrets continue to grow over time...\n",
+    "You should see a number between near 6%. That's better than the random action baseline of 3.75%, but no where near the best case scenario of 15.18% return. Hence, our regrets continue to grow over time...\n",
     "\n",
     "Note that investing solely in the S&P stock index which would have produced better than 8% return over that period -- that is, if one could wait 92 years. However, investing one's entire portfolio into stocks can become quite a risky policy in the short-term, so we were exploring how to balance a portfolio given only limited information.\n",
     "\n",
@@ -606,7 +605,20 @@
    "source": [
     "## Exercise 1\n",
     "\n",
-    "Try using a `LinUCBTrainer`-based trainer. How does the annualized return compare?"
+    "Try using a `LinUCBTrainer`-based trainer.\n",
+    "\n",
+    "How does the annualized return compare?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2\n",
+    "\n",
+    "Inflation rates tend to get reported months after they've occurred. To be more accurate with using this dataset, offset the *inflation* observation one step (1 year) ahead.\n",
+    "\n",
+    "How does the annualized return compare?"
    ]
   },
   {
@@ -666,7 +678,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A final note: when you checkpoint it will change how the training performs in this notebook, if you rerun the training! So be sure to start from scratch when doing experiments here, if that's what you intend!"
+    "A final note: using checkpoints will change how the training performs in this notebook, if you rerun it. So be sure to start from scratch when doing experiments here, if that's what you intend!"
    ]
   },
   {
@@ -675,7 +687,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.shutdown()  # \"Undo ray.init()\"."
+    "ray.shutdown()"
    ]
   }
  ],
@@ -695,7 +707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
