--- a/ray-rllib/multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb
+++ b/ray-rllib/multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb
@@ -28,7 +28,9 @@
     "from gym.spaces import Discrete, Box\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import os, time, random\n",
+    "import os\n",
+    "import time\n",
+    "import random\n",
     "import ray\n",
     "from ray.tune.progress_reporter import JupyterNotebookReporter"
    ]
@@ -163,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = analysis.dataframe()\n",
+    "df = analysis.dataframe(metric=\"episode_reward_mean\", mode=\"max\")\n",
     "df"
    ]
   },
@@ -289,7 +291,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "stats = analysis.stats()\n",
@@ -303,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = analysis.dataframe()\n",
+    "df = analysis.dataframe(metric=\"episode_reward_mean\", mode=\"max\")\n",
     "df"
    ]
   },
@@ -311,7 +317,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It ran the maximum of 20,000 steps and the best it does falls between 4.8 to 5.2 (for different runs), not 10.0. the `episode_reward_mean` is chaotic:\n",
+    "It ran the maximum of 20,000 steps and the best it does (for different runs) is well below 10.0. the `episode_reward_mean` is chaotic:\n",
     "\n",
     "![Nonlinear model with LinUCB](../../../images/rllib/TensorBoard2.png).\n",
     "\n",
@@ -369,7 +375,7 @@
    },
    "outputs": [],
    "source": [
-    "df = analysis.dataframe()\n",
+    "df = analysis.dataframe(metric=\"episode_reward_mean\", mode=\"max\")\n",
     "df"
    ]
   },
@@ -416,7 +422,7 @@
    },
    "outputs": [],
    "source": [
-    "df = analysis.dataframe()\n",
+    "df = analysis.dataframe(metric=\"episode_reward_mean\", mode=\"max\")\n",
     "df"
    ]
   },
@@ -504,33 +510,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('../../..') # ... and line_plot functions from \"util\"\n",
-    "from util.line_plots import plot_line, plot_line_with_stddev, plot_line_with_min_max\n",
-    "\n",
-    "sys.path.append(\"..\")          # So we can load the bokeh_util from the parent directory...\n",
-    "from bokeh_util import plot_cumulative_regret, plot_wheel_bandit_model_weights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# The next two lines prevent Bokeh from opening the graph in a new window.\n",
-    "import bokeh\n",
-    "bokeh.io.reset_output()\n",
-    "bokeh.io.output_notebook()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_cumulative_regret(df)"
+    "df.plot(y=\"mean\", yerr=\"std\")"
    ]
   },
   {
@@ -586,7 +566,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_ts(delta):\n",
+    "def run_ts (delta):\n",
     "    TS_CONFIG[\"delta\"] = delta\n",
     "\n",
     "    start_time = time.time()\n",
@@ -615,7 +595,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_df(df, analysis):\n",
+    "def process_df (df, analysis):\n",
     "    ts_regrets = df \\\n",
     "        .groupby(\"info/num_steps_trained\")[\"info/learner/default_policy/cumulative_regret\"] \\\n",
     "        .aggregate([\"mean\", \"max\", \"min\", \"std\"])\n",
@@ -651,7 +631,8 @@
    },
    "outputs": [],
    "source": [
-    "ts_regrets7, model7, means7, covs7 = process_df(ts_df7, analysis7)"
+    "ts_regrets7, model7, means7, covs7 = process_df(ts_df7, analysis7)\n",
+    "ts_regrets7.head()"
    ]
   },
   {
@@ -660,7 +641,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cumulative_regret(ts_regrets7)"
+    "ts_regrets7.plot(y=\"mean\", yerr=\"std\")"
    ]
   },
   {
@@ -669,7 +650,7 @@
    "source": [
     "([image](../../../images/rllib/LinTS-Cumulative-Regret-07.png))\n",
     "\n",
-    "The cumulative regret values are much higher than for $\\delta = 0.5$ in the lesson, and the standard deviation is ... well crazy. We mentioned in the lesson that the problem becomes harder for higher $\\delta$, which fits this result."
+    "The cumulative regret values are much higher than for $\\delta = 0.5$ in the lesson, and the standard deviation may diverge. We mentioned in the lesson that the problem becomes harder for higher $\\delta$, which fits this result."
    ]
   },
   {
@@ -678,7 +659,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_wheel_bandit_model_weights(means7, covs7)"
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "colors  = [\"blue\", \"black\", \"green\", \"red\", \"yellow\"]\n",
+    "\n",
+    "for i in range(0, 5):\n",
+    "    x, y = np.random.multivariate_normal(means7[i] / 30, covs7[i], 5000).T\n",
+    "    plt.scatter(x, y, color=colors[i])\n",
+    "    \n",
+    "plt.show()"
    ]
   },
   {
@@ -721,7 +712,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cumulative_regret(ts_regrets9)"
+    "ts_regrets9.plot(y=\"mean\", yerr=\"std\")"
    ]
   },
   {
@@ -739,7 +730,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_wheel_bandit_model_weights(means9, covs9)"
+    "colors  = [\"blue\", \"black\", \"green\", \"red\", \"yellow\"]\n",
+    "\n",
+    "for i in range(0, 5):\n",
+    "    x, y = np.random.multivariate_normal(means9[i] / 30, covs9[i], 5000).T\n",
+    "    plt.scatter(x, y, color=colors[i])\n",
+    "    \n",
+    "plt.show()"
    ]
   },
   {
@@ -767,7 +764,7 @@
     "# Some properties we'll need:\n",
     "DEFAULT_MAX_INFLATION = 100.0\n",
     "DEFAULT_TICKERS = [\"sp500\", \"t.bill\", \"t.bond\", \"corp\"]\n",
-    "DEFAULT_DATA_FILE = os.path.abspath(os.path.curdir) + '/../market.tsv'  # full path\n",
+    "DEFAULT_DATA_FILE = os.path.abspath(os.path.curdir) + \"/../market.tsv\"  # full path\n",
     "\n",
     "def load_market_data (file_name):\n",
     "    with open(file_name, \"r\") as f:\n",
@@ -799,7 +796,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ray.rllib.agents.trainer import with_base_config, with_common_config\n",
     "from ray.rllib.contrib.bandits.agents.lin_ucb import UCB_CONFIG\n",
     "from ray.rllib.contrib.bandits.agents.lin_ucb import LinUCBTrainer\n",
     "import ray"
@@ -896,12 +892,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "market_config = with_base_config(UCB_CONFIG, {\n",
-    "    \"env\":           MarketBandit,\n",
-    "    'max-inflation': DEFAULT_MAX_INFLATION,\n",
-    "    'tickers':       DEFAULT_TICKERS,\n",
-    "    'data-file':     DEFAULT_DATA_FILE\n",
-    "})\n",
+    "import copy\n",
+    "\n",
+    "market_config = copy.deepcopy(UCB_CONFIG)\n",
+    "\n",
+    "market_config[\"env\"] = MarketBandit\n",
+    "market_config[\"max-inflation\"] = DEFAULT_MAX_INFLATION;\n",
+    "market_config[\"tickers\"] = DEFAULT_TICKERS;\n",
+    "market_config[\"data-file\"] = DEFAULT_DATA_FILE;\n",
     "\n",
     "stop = {\n",
     "    \"training_iteration\": 100\n",
@@ -994,7 +992,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The results for _LinTS_ were ~570 for reward mean and the regret stayed under 10000. So, training with _LinUCB_ isn't as successful."
+    "The results for _LinTS_ were ~340 for reward mean. So, training with _LinUCB_ isn't as successful."
    ]
   },
   {
@@ -1003,8 +1001,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_line_with_stddev(rewards, x_col='info/num_steps_trained', y_col='mean', stddev_col='std', \n",
-    "                      title='Rewards vs. Steps', x_axis_label='step', y_axis_label='reward')"
+    "rewards.plot(y=\"mean\", yerr=\"std\")"
    ]
   },
   {
@@ -1020,7 +1017,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cumulative_regret(regrets)"
+    "regrets.plot(y=\"mean\", yerr=\"std\")"
    ]
   },
   {
@@ -1056,7 +1053,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.shutdown()  # \"Undo ray.init()\"."
+    "ray.shutdown()"
    ]
   }
  ],
@@ -1076,7 +1073,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
